--- a/src/app/browse/list/list.component.html
+++ b/src/app/browse/list/list.component.html
@@ -33,7 +33,7 @@
         <h3 class="task-listing-title">{{task.title}}</h3>
         <ul class="task-icons">
           <li><i class="icon-material-outline-location-on"></i> {{task.country}}</li>
-          <li><i class="icon-material-outline-access-time"></i>{{(task.timestamp)}}</li>
+          <li><i class="icon-material-outline-access-time"></i>{{task.timestamp | date:'medium'}}</li>
         </ul>
         <p class="task-listing-text">{{task.description}}</p>
         <div class="task-tags">
