--- a/src/app/me/messages/inbox-list/inbox-list.component.html
+++ b/src/app/me/messages/inbox-list/inbox-list.component.html
@@ -7,7 +7,7 @@
     </div>
   </div>
 
-  <ul  style="min-height: 40vh;">
+  <ul  style="width: 300px; overflow-y: auto; height: 50vh;">
     <li  *ngFor="let chat of chats; let i=index;"
       [ngClass]="chatId==chat.id?'active-message':''">
 
@@ -19,8 +19,8 @@
         <div class="message-by">
           <div class="message-by-headline">
             <h5>{{chat.other.firstName}} {{chat.other.lastName}}</h5>
-            <span>{{chat.msgs.slice(-1)[0].timestamp}}</span>
           </div>
+          <div><span>{{chat.msgs.slice(-1)[0].timestamp | date}}</span></div>
           <p>{{chat.msgs.slice(-1)[0].content}}</p>
         </div>
       </a>
