--- a/src/app/single-task/single-task.page.html
+++ b/src/app/single-task/single-task.page.html
@@ -28,12 +28,12 @@
           <li ngbNavItem="bids" *ngIf="isMyProject()">
             <a ngbNavLink routerLink="bids">Bids</a>
           </li>
-          <li ngbNavItem="contract" *ngIf="sss.task.status==1">
+          <li ngbNavItem="contract" *ngIf="sss.task.refContract && isMyContract()">
             <a ngbNavLink routerLink="contract">Contract</a>
           </li>
-          <li ngbNavItem="review" *ngIf="sss.task.status==2">
+          <!-- <li ngbNavItem="review" *ngIf="sss.task.status==2">
             <a ngbNavLink routerLink="review">Review</a>
-          </li>
+          </li> -->
 
         </ul>
 
