--- a/src/app/1/shared/header/header.component.html
+++ b/src/app/1/shared/header/header.component.html
@@ -81,8 +81,9 @@
                     [src]="me?.avatar || 'assets/images/user-avatar-placeholder.png'" alt="">
                   <div class="user-name">
                     {{me?.firstName}} {{me?.lastName}}
+                    <div>${{financeService.profile?.balance}}</div>
                   </div>
-
+                  
                 </div>
 
               </div>
