--- a/src/app/me/dashboard/dashboard.page.html
+++ b/src/app/me/dashboard/dashboard.page.html
@@ -1,9 +1,73 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>dashboard</ion-title>
-  </ion-toolbar>
-</ion-header>
+<!-- Dashboard Headline -->
+<div class="dashboard-headline">
+  <h3>Howdy, {{userService.me?.firstName}}!</h3>
+  <span>We are glad to see you again!</span>
+</div>
 
-<ion-content>
+<!-- Fun Facts Container -->
+<div class="fun-facts-container">
+  <div class="fun-fact" data-fun-fact-color="#b81b7f">
+    <div class="fun-fact-text">
+      <span>Balance(US$)</span>
+      <h4>{{financeService.profile?.balance}}</h4>
+      
+    </div>
+    <div class="fun-fact-icon"><i class="icon-line-awesome-money"></i></div>
+  </div>
+  <div class="fun-fact" data-fun-fact-color="#36bd78">
+    <div class="fun-fact-text">
+      <span>Task Bids Won</span>
+      <h4>22</h4>
+    </div>
+    <div class="fun-fact-icon"><i class="icon-material-outline-gavel"></i></div>
+  </div>
+  <div class="fun-fact" data-fun-fact-color="#efa80f">
+    <div class="fun-fact-text">
+      <span>Reviews</span>
+      <h4>28</h4>
+    </div>
+    <div class="fun-fact-icon"><i class="icon-material-outline-rate-review"></i></div>
+  </div>
 
-</ion-content>
+  <!-- Last one has to be hidden below 1600px, sorry :( -->
+  <div class="fun-fact" data-fun-fact-color="#2a41e6">
+    <div class="fun-fact-text">
+      <span>This Month Views</span>
+      <h4>987</h4>
+    </div>
+    <div class="fun-fact-icon"><i class="icon-feather-trending-up"></i></div>
+  </div>
+</div>
+
+<!-- Row -->
+<div class="row">
+
+  <div class="col-xl-8">
+    <!-- Dashboard Box -->
+    <div class="dashboard-box main-box-in-row">
+      <div class="headline">
+        <h3><i class="icon-feather-bar-chart-2"></i> Your Profile Views</h3>
+        <div class="sort-by">
+          <select class="selectpicker hide-tick">
+            <option>Last 6 Months</option>
+            <option>This Year</option>
+            <option>This Month</option>
+          </select>
+        </div>
+      </div>
+      <div class="content">
+        <!-- Chart -->
+        <div class="chart">
+          <canvas id="chart" width="100" height="45"></canvas>
+        </div>
+      </div>
+    </div>
+    <!-- Dashboard Box / End -->
+  </div>
+  <div class="col-xl-4">
+
+  </div>
+</div>
+<!-- Row / End -->
+
+
