--- a/src/app/me/components/dashboard-sidebar/dashboard-sidebar.component.html
+++ b/src/app/me/components/dashboard-sidebar/dashboard-sidebar.component.html
@@ -22,7 +22,9 @@
             <li [routerLink]="'dashboard'" routerLinkActive="active">
               <a href="#"><i class="icon-material-outline-dashboard"></i> Dashboard</a>
             </li>
-
+            <li [routerLink]="'finance'" routerLinkActive="active">
+              <a href="#"><i class="icon-line-awesome-money"></i>Finance</a>
+            </li>
             <li [routerLink]="'messages'" routerLinkActive="active">
               <a href="#"><i class="icon-material-outline-question-answer"></i> 
                 Messages 
