--- a/src/app/me/dashboard/dashboard.page.html
+++ b/src/app/me/dashboard/dashboard.page.html
@@ -8,9 +8,9 @@
 <div class="fun-facts-container">
   <div class="fun-fact" data-fun-fact-color="#b81b7f">
     <div class="fun-fact-text">
-      <span>Balance(US$)</span>
-      <h4>{{financeService.profile?.balance}}</h4>
-      
+      <!-- <span>Balance(US$)</span>
+      <h4>{{financeService.profile?.balance | currency}}</h4>
+       -->
     </div>
     <div class="fun-fact-icon"><i class="icon-line-awesome-money"></i></div>
   </div>
