--- a/src/app/my-tasks/freelancer/list1/list1.component.html
+++ b/src/app/my-tasks/freelancer/list1/list1.component.html
@@ -7,22 +7,29 @@
           <th scope="col">#</th>
           <th scope="col">Task Title</th>
           <th scope="col">Employer</th>
-          <th scope="col">Awarded Bid</th>
+          <th scope="col">Budget</th>
           <th scope="col">Deadline</th>
           <th scope="col">Action</th>
         </tr>
       </thead>
       <tbody>
-        <!-- <tr *ngFor="let task of tasks; let i=index;">
+        <tr *ngFor="let contract of contracts; let i=index;">
           <th scope="row">{{i+1}}</th>
           <td>
-            <a [routerLink]="'/single-task/'+task._id">{{task.title}}</a>
+            <a [routerLink]="'/single-task/'+contract.refTask._id">{{contract.refTask.title}}</a>
+          </td>
+          <td>
+            <a href="#" (click)="false">{{contract.refEmployer.firstName}} {{contract.refEmployer.lastName}}</a>
+          </td>
+          <td>
+            {{contract.budget | currency}} 
+            <span *ngIf="contract.isHourly">/hour</span>
+          </td>
+          <td>
+            {{contract.endDate | date}}
           </td>
           <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr> -->
+        </tr>
       </tbody>
     </table>
   </mat-card>
