--- a/src/app/me/components/dashboard-sidebar/dashboard-sidebar.component.html
+++ b/src/app/me/components/dashboard-sidebar/dashboard-sidebar.component.html
@@ -45,7 +45,7 @@
           
 
           <ul data-submenu-title="Account">
-            <li [routerLink]="'settings'" routerLinkActive="active"><a href="#"><i class="icon-material-outline-settings"></i>Settings</a></li>
+            <li [routerLink]="'settings'" routerLinkActive="active"><a href="#"><i class="icon-material-outline-settings"></i>Profile</a></li>
             <li><a href="#" (click)="onClickLogout()"><i class="icon-material-outline-power-settings-new"></i> Logout</a>
             </li>
           </ul>
